@@ -111,6 +111,10 @@ void NDbKValue::setTTL(ttl_t ttl) {
   key_.setTTL(ttl);
 }
 
+ttl_t NDbKValue::TTL() const {
+  return key_.ttl();
+}
+
 void NDbKValue::setValue(NValue value) {
   value_ = value;
 }
